# fireworks-rft-sql-demo

./: .gcloudignore  .gitignore  Dockerfile  RFT-SQL-TUTORIAL.md  RFT_SQL_Tutorial.ipynb  mcp_requirements.txt  pyproject.toml  run_mcp_server.py
