[project]
name = "rft-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.1",
    "faker>=37.4.0",
    "fireworks-ai>=0.17.20",
    "ipykernel>=6.29.5",
    "jsonlines>=4.0.0",
    "mcp>=1.10.1",
    "mcp-server-motherduck>=0.6.3",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "pyngrok>=7.2.11",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "reward-kit",
    "starlette>=0.46.2",
    "tabulate>=0.9.0",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
reward-kit = { path = "../../../../Code/reward-kit", editable = true }
